--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,1 +1,7 @@
-<%= @doses %>
+<div class=“container”>
+ <%= simple_form_for [@cocktail, @dose] do |f| %>
+   <%= f.association :ingredient, as: :check_boxes %>
+   <%= f.input :description %>
+   <%= f.submit "Swish Swish", class: "btn btn-primary" %>
+ <% end %>
+</div>
