--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,2 +1,12 @@
+<br>
 <%= @cocktail.name %>
+<br>
+<br>
 <%= link_to('Add Dosage', new_cocktail_dose_path(@cocktail)) %>
+<br>
+<br>
+<% @cocktail.doses.each do |f| %>
+  <p><%= f.ingredient.name %></p>
+  <p><%= f.description %></p>
+  <%= link_to "Delete", dose_path(f), method: :delete, data: { confirm: "Are you sure?" } %>
+<% end %>
