--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,11 +1,25 @@
-<h1> Cocktail Index </h1>
+<h1> Dr. Cocktail </h1>
 <br>
-<% @cocktails.each do |cocktail| %>
-<h2><%= cocktail.name %></h2>
+<div class="container">
+  <div class="row">
+    <% @cocktails.each do |cocktail| %>
+<!-- <h2><%= cocktail.name %></h2>
   <%= link_to(cocktail.name, cocktail_path(cocktail.id)) %>
   <br>
   <br>
-  <%= link_to "Delete", cocktail_path(cocktail), method: :delete, data: { confirm: "Are you sure?" } %>
-<% end %>
+  <%= link_to "Delete", cocktail_path(cocktail), method: :delete, data: { confirm: "Are you sure?" } %> -->
 
+  <div class="col-xs-12 col-sm-4">
+    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));">
+      <div class="card-description">
+        <h2><%= cocktail.name %></h2>
+        <p>Check It Out Bro</p>
+      </div>
+      <!-- <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay"> -->
+      <%= link_to("", cocktail_path(cocktail.id), class: "card-link") %>
+    </div>
+  </div>
+  <% end %>
+</div>
+</div>
 
