Getting Better on Style

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,8 +5,8 @@
   background-position: center;
   color: red;
   position: relative;
-  border-color: red;
-  border-width: 2px;
+  border-style: solid;
+  border-width: 1px;
 }
 .card-user {
   position: absolute;
