--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,6 @@
 <h1> Dr. Cocktail </h1>
 <br>
+<br>
 <div class="container">
   <div class="row">
     <% @cocktails.each do |cocktail| %>
@@ -13,7 +14,7 @@
     <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));">
       <div class="card-description">
         <h2><%= cocktail.name %></h2>
-        <p>Check It Out Bro</p>
+        <p>Check It Out</p>
       </div>
       <!-- <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay"> -->
       <%= link_to("", cocktail_path(cocktail.id), class: "card-link") %>
@@ -21,5 +22,8 @@
   </div>
   <% end %>
 </div>
+  <br>
+  <br>
+  <%= link_to("Create Cocktail", new_cocktail_path, class: "btn-primary btn") %>
 </div>
 
