--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -2,6 +2,6 @@
  <%= simple_form_for [@cocktail, @dose] do |f| %>
    <%= f.input :ingredient_id, collection: Ingredient.all %>
    <%= f.input :description %>
-   <%= f.submit "Drink It Up", class: "btn btn-primary" %>
+   <%= f.submit "Drink It Up", class: "btn btn-danger" %>
  <% end %>
 </div>
