Big Improvement(Cards Still Look Bad, No Search Bar etc.)

--- a/app/assets/stylesheets/pages/_new_card.scss
+++ b/app/assets/stylesheets/pages/_new_card.scss
@@ -1,6 +1,4 @@
-.card_new{
-  border-top: ;
-  border-bottom: ;
-  border-left: ;
-  border-right: ;
-}
+// create new_card class on line 18 in show.html.erb
+// .new_card{
+
+// }
