--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -15,7 +15,7 @@
 <div class="container">
   <div class="row">
 <% @cocktail.doses.each do |f| %>
-  <div class="card_new" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));">
+  <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));">
       <div class="card-description">
         <h2><%= f.ingredient.name %></h2>
         <p><%= f.description %></p>
